--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ nav .nav-links a.selected{
 
 .experience .header h4{
     font-size: 20px;
-    font-weight: 400;
+    font-weight: bold;
 }
 
 .experience .header a{
